Fixed spacing and orientation on delivery/location sections

--- a/css/main.css
+++ b/css/main.css
@@ -581,7 +581,7 @@ input:focus {
     }
     .logo h2 {
         margin: 0 auto;
-        font-size: 3rem;
+        font-size: 2rem;
     }
     .off-screen-menu {
         max-width: 350px;
@@ -613,14 +613,26 @@ input:focus {
     .side-panel {
         display: none;
     }
+    .products-content {
+        display: flex;
+    }
     .products-left,
     .products-right {
         display: none;
     }
+    #location-page {
+        display: flex;
+        flex-direction: column-reverse;
+        padding: 2em 1em;
+    }
+    #delivery-page {
+        height: auto;
+    }
     .footer-content {
         display: flex;
-        justify-content: space-between;
-        padding-top: 2em;
+        flex-direction: column;
+        padding: 2em 0 6em 0;
+        margin: 0;
     }
     .footer-content p {
         font-size: 0.75rem;
